[gd_scene load_steps=6 format=2]

[ext_resource path="res://graphics/themes/theme.tres" type="Theme" id=1]
[ext_resource path="res://source/interface/menu/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://graphics/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://source/interface/menu/MenuButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_char = 10
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 250.0
margin_top = 91.0
margin_right = 390.0
margin_bottom = 269.0
custom_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 140.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Raphie"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 140.0
margin_bottom = 178.0
custom_constants/separation = 8

[node name="Play" parent="CenterContainer/VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_right = 140.0
margin_bottom = 26.0
text = "New Game"
grab_focus = true

[node name="Load" parent="CenterContainer/VBoxContainer/Buttons" instance=ExtResource( 4 )]
visible = false
margin_right = 140.0
margin_bottom = 26.0
text = "Load"
grab_focus = true

[node name="Credits" parent="CenterContainer/VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 34.0
margin_right = 140.0
margin_bottom = 60.0
text = "Credits"

[node name="Settings" parent="CenterContainer/VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 68.0
margin_right = 140.0
margin_bottom = 94.0
text = "Settings"

[node name="Quit" parent="CenterContainer/VBoxContainer/Buttons" instance=ExtResource( 4 )]
margin_top = 102.0
margin_right = 140.0
margin_bottom = 128.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
